--------------------------------------------------------------------
6.3.0
--------------------------------------------------------------------

 * [BUG] JSON output is erroneously encoded as JavaScript
 * [BUG] JSON output for monthly usage has an erroneous comma (github.com/YasuhiroABE)
 * [BUG] Percentages for some transfer amounts are computed incorrectly as zeros (github.com/YasuhiroABE)

--------------------------------------------------------------------
6.2.0 [03-Jul-2022] -- Stone Steps Inc. (www.stonesteps.ca)
--------------------------------------------------------------------

 * [AB-103] Added an Nginx log parser and NginxLogFormat configuration variable
 * [AB-105] User agent URL tokens are filtered out at the highest MangleAgents level
 * [AB-106] Removed all default user agent argument filters
 * [AB-107] Removed all default search engine arguments
 * [BUG][AB-104] First character in user agents is dropped when all filters are empty
 * Increased font sizes in reports by 2-3 points in a few places
 * [BUG][AB-70] Fixed stale city/ASN counts, country pages between months
 * [BUG] Fixed malformed language files (Danish, Dutch, Estonian, Hungarian, Indonesian, Turkish)

--------------------------------------------------------------------
6.1.0 [20-Jun-2021] -- Stone Steps Inc. (www.stonesteps.ca)
--------------------------------------------------------------------

 * [AB-62] Implemented JSON output for Mongo DB imports
 * [AB-46] Added install/uninstall targets to Makefile
 * [BUG][AB-61] Fixed "Nodes must be linserted in the ascending time stamp order" error

--------------------------------------------------------------------
6.0.0 [25-Dec-2019] -- Stone Steps Inc. (www.stonesteps.ca)
--------------------------------------------------------------------

 * Implemented PageTitle configuration variable for associating URL patterns with page titles
 * [BB-20] Added Autonomous System columns to relevant reports and added a top AS organizations report